--- a/index.html
+++ b/index.html
@@ -2,37 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>
-        My name
-    </title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
+    <title>suger tap</title>
+    <script 
+      src="https://kit.fontawesome.com/99bb06f8df.js" 
+      crossorigin="anonymous"
+    ></script>
+    <script src="main.js" defer></script>
 </head>
 <body>
-    <div class="menu-area">
-        <ul>
-            <li>나의이름</li>
-            <li>궁금하니</li>
-            <li>맞춰봐라
-                <ul class="dropdown">
-                    <li>메리</li>
-                    <li>메리</li>
-                    <a href="file:///C:/Minju/test/merry.html"><li>메리</li></a>
-                    <li>메리</li>
-                    <li>메리</li>
-                    <li>메리</li>
-                </ul>
-            </li>
-            <li>연습끝</li>
-            <li>빠빠이</li>
-        </ul>
-    </div>
-</body>
-<footer>
-    <div class="footer">
-        <ul>
-            <li>이름:victoria</li>
-        </ul>
-    </div>
-</footer>
+    <nav class="navbar">
+        <div class="navbar__logo">
+            <i class="fas fa-apple-alt fa-spin"></i>
+             <a href=index.html>KokoDing</a>     
+        </div>
 
+        <ui class="navbar__menu">
+            <li><a href=merry.html>메리</a></li>
+            <li><a href="Chris.html">크리스</a></li>
+            <li><a href="mas.html">마스</a></li>
+            <li><a href="alex.html">알렉스</a></li>
+            <li><a href="koko.html">의명이</a></li>
+        </ui>
+
+        <ul class="navbar__icons">
+            <li><i class="fas fa-bone"></i></li>
+            <li><i class="fas fa-drumstick-bite"></i></li>
+        </ul>
+
+        <a href="#" class="navbar__tooglebtn">
+        <i class="fas fa-hamburger"></i>
+      </a>
+    </nav>
+  </body>
 </html>
